Made lodge text more readable, styled flash messages and links, fixed the form's text area and submit button and spaced everything a bit more nicely.

--- a/app/assets/stylesheets/_backgrounds.sass
+++ b/app/assets/stylesheets/_backgrounds.sass
@@ -10,15 +10,16 @@ $colors: $deep-fir $oregon $eternity $deep-fir
     padding:
       left: 80px
       right: 80px
+    +padding-trailer(1)
     background:
       color: nth($section, 2)
     color: text-color(nth($section, 2))
 
 section.where
   background:
-    image: url('timberline-dusk.jpg')
+    image: url('timberline-dark.jpg')
     position: 30% 40%
-  color: $totem-pole
+  color: white$totem-pole
   @media (min-width: 1600px)
     background:
       size: 100% auto
